# CriticSearch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  articles.db  config.yaml.template  conversation_data.json  conversation_history.jsonl  conversation_history_sharegpt.jsonl  critic_annotation_exp.json  environment.txt  environment.yml  eval.py  example_usage.py  extract_ground_truth.py  openai_deepresearch_pipeline.py  output.txt  process_json.py  pyproject.toml  read_titles.py  report_benchmark.py  report_evaluation.py  requirements.txt  settings.yaml.template  sharegpt_eval.json  tavily_response_example.json  test_available_tools_refactor.py  test_base_agent_tools.py  test_tavily.py  thought.py  wikitext.json
.project_doc_record/: meta-info.json  project_hierarchy.json
agent_factory/: README.md  __main__.py  agent.py  communicator.py  config.py  evaluator.py  lmm_node.py  main.py  manager.py  planner.py  tools.py  utils.py
config/: config.yaml
conversation_histories/: 2024_Belgian_federal_election_20250523_061757_conversation.json  2024_Belgian_federal_election_20250523_062736_conversation.json  2024_Belgian_federal_election_20250523_065903_conversation.json  2024_Belgian_federal_election_20250523_173852_conversation.json  2024_Botswana_general_election_20250429_184717_conversation.json  2024_Botswana_general_election_20250429_215715_conversation.json  2024_Botswana_general_election_20250430_010120_conversation.json  2024_Botswana_general_election_20250503_051147_conversation.json  2024_Tuvaluan_general_election_20250502_175046_conversation.json  all_sections_sharegpt.json  convert_to_sharegpt.py  sharegpt_conversations_3055.json  sharegpt_conversations_4962.json  sharegpt_conversations_6725.json  test.md  给我写一份2024年叙利亚反对派进攻战役概述_20250522_175147_conversation.json
critic_agent/: critic_agent.py  main.py  planner_agent.py
critic_search/: __init__.py  __main__.py  base_agent.py  config.py  critic_agent.py  eval.py  llm_service.py  log.py  main.py  manager.py  models.py  run_tasks.py  search_plan_agent.py  utils.py
eval/: combined_metrics.csv  comptempqa__critic_gpt4omini_clean.csv  comptempqa_data.json  comptempqa_perplexity_large.csv  comptempqa_perplexity_small.csv  eval.ipynb  eval_example.py  hotpotqa_critic_gpt4omini.csv  hotpotqa_perplexity_small.csv  hotpotqa_processed.csv  llm.py  perplexity_large.csv  perplexity_large_clean.csv  sampled_data.json  wiki_data.json  wikiqa_critic_gpt4omini.csv  wikiqa_perplexity_large.csv  wikiqa_perplexity_small.csv
logs/: trajectory_chat.jsonl
markdown_docs/: extract_ground_truth.md  openai_deepresearch_pipeline.md  report_benchmark.md  report_evaluation.md  tree_comparison.md
prompts/: agent_update_answer.txt  critic_agent.txt  manager_break_down.txt  (+1 more)
(+238 files in other folders)
