[project]
name = "criticsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "datasets>=3.2.0",
    "duckduckgo-search>=6.3.5",
    "dynaconf>=3.2.6",
    "griffe>=1.5.1",
    "httpx[http2]>=0.27.2",
    "jinja2>=3.1.4",
    "openai>=1.55.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "tavily-python>=0.5.0",
    "tenacity>=9.0.0",
    "ipython (>=8.32.0,<9.0.0)",
    "rouge-score>=0.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.8.0",
]

[tool.ruff]
exclude = ["eval"]

[tool.ruff.lint]
# 启用导入排序规则
select = ["I001"] 

[project.scripts]
criticsearch = "criticsearch.tasks_runner:start_task_execution"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
